--- a/Develop/cypress/tsconfig.json
+++ b/Develop/cypress/tsconfig.json
@@ -3,12 +3,12 @@
   "compilerOptions": {
     "target": "ES2020",
     "lib": ["ES2020", "DOM"],
-    "types": ["cypress", "node", "@testing-library/cypress"],
+    "types": ["cypress", "mocha", "node", "@testing-library/cypress"],
     "isolatedModules": false,
     "noEmit": true,
     "composite": true,
     "jsx": "react-jsx",
     "strict": true
   },
-  "include": ["**/*.tsx", "**/*.ts", "**/*.js", "**/*.jsx"]
+  "include": ["**/*.cy.ts", "**/*.cy.tsx", "**/*.js"]
 } 
