--- a/Develop/package.json
+++ b/Develop/package.json
@@ -22,6 +22,8 @@
   "license": "ISC",
   "devDependencies": {
     "@testing-library/cypress": "10.0.2",
+    "@types/cypress": "^0.1.6",
+    "@types/mocha": "^10.0.10",
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
